--- a/2.2.5/Dockerfile
+++ b/2.2.5/Dockerfile
@@ -3,11 +3,16 @@ FROM jupyter/datascience-notebook:lab-2.2.5
 USER root
 
 # Install a few dependencies for iCommands, text editing, and monitoring instances
-RUN apt-get update && apt-get install -y lsb-release wget apt-transport-https curl supervisor nginx gnupg2 libfuse2 nano htop gcc less nodejs software-properties-common apt-utils glances 
-
-RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | apt-key add - && \
-    echo "deb [arch=amd64] https://packages.irods.org/apt/ bionic main" >> /etc/apt/sources.list.d/renci-irods.list && \
-    apt-get update
+RUN apt-get update && apt-get install -y lsb-release wget apt-transport-https curl supervisor nginx gnupg2 libfuse2 nano htop gcc less nodejs software-properties-common apt-utils glances
+RUN curl "http://ftp.debian.org/debian/pool/main/g/glibc/multiarch-support_2.28-10_amd64.deb" -O && \
+    dpkg -i multiarch-support_2.28-10_amd64.deb && \
+    rm multiarch-support_2.28-10_amd64.deb
+RUN curl "http://ftp.se.debian.org/debian/pool/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u8_amd64.deb" -O && \
+    dpkg -i libssl1.0.0_1.0.1t-1+deb8u8_amd64.deb && \
+    rm libssl1.0.0_1.0.1t-1+deb8u8_amd64.deb
+RUN wget https://files.renci.org/pub/irods/releases/4.1.12/ubuntu14/irods-icommands-4.1.12-ubuntu14-x86_64.deb && \
+    dpkg -i irods-icommands-4.1.12-ubuntu14-x86_64.deb && \
+    rm irods-icommands-4.1.12-ubuntu14-x86_64.deb
 
 # install jupyterlab git extension
 RUN jupyter labextension install @jupyterlab/git && \
