--- a/2.2.5/Dockerfile
+++ b/2.2.5/Dockerfile
@@ -4,32 +4,55 @@ USER root
 
 # Install a few dependencies for iCommands, text editing, and monitoring instances
 RUN apt-get update && apt-get install -y lsb-release wget apt-transport-https curl supervisor nginx gnupg2 libfuse2 nano htop gcc less nodejs software-properties-common apt-utils glances
-RUN curl "http://ftp.debian.org/debian/pool/main/g/glibc/multiarch-support_2.28-10_amd64.deb" -O && \
-    dpkg -i multiarch-support_2.28-10_amd64.deb && \
-    rm multiarch-support_2.28-10_amd64.deb
-RUN curl "http://ftp.se.debian.org/debian/pool/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u8_amd64.deb" -O && \
-    dpkg -i libssl1.0.0_1.0.1t-1+deb8u8_amd64.deb && \
-    rm libssl1.0.0_1.0.1t-1+deb8u8_amd64.deb
-RUN wget https://files.renci.org/pub/irods/releases/4.1.12/ubuntu14/irods-icommands-4.1.12-ubuntu14-x86_64.deb && \
-    dpkg -i irods-icommands-4.1.12-ubuntu14-x86_64.deb && \
-    rm irods-icommands-4.1.12-ubuntu14-x86_64.deb
+
+RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | apt-key add - && \
+    echo "deb [arch=amd64] https://packages.irods.org/apt/ bionic  main" > /etc/apt/sources.list.d/renci-irods.list && \
+    apt-get update && \
+    wget -c \
+    http://security.ubuntu.com/ubuntu/pool/main/p/python-urllib3/python-urllib3_1.22-1ubuntu0.18.04.2_all.deb \
+    http://security.ubuntu.com/ubuntu/pool/main/r/requests/python-requests_2.18.4-2ubuntu0.1_all.deb \
+    http://security.ubuntu.com/ubuntu/pool/main/o/openssl1.0/libssl1.0.0_1.0.2n-1ubuntu5.5_amd64.deb && \
+    apt install -y \
+    ./python-urllib3_1.22-1ubuntu0.18.04.2_all.deb \
+    ./python-requests_2.18.4-2ubuntu0.1_all.deb \
+    ./libssl1.0.0_1.0.2n-1ubuntu5.5_amd64.deb && \
+    rm -rf \
+    ./python-urllib3_1.22-1ubuntu0.18.04.2_all.deb \
+    ./python-requests_2.18.4-2ubuntu0.1_all.deb \
+    ./libssl1.0.0_1.0.2n-1ubuntu5.5_amd64.deb
+
+RUN apt install -y irods-icommands
 
 # install jupyterlab git extension
 RUN jupyter labextension install @jupyterlab/git && \
         pip install --upgrade jupyterlab-git && \
         jupyter serverextension enable --py jupyterlab_git
 
+# install jupyterlab github extention
+RUN jupyter labextension install @jupyterlab/github && \
+        jupyter lab build
+
 # Install CyberDuck CLI
-RUN echo -e "deb https://s3.amazonaws.com/repo.deb.cyberduck.io stable main" | tee /etc/apt/sources.list.d/cyberduck.list > /dev/null && \
-apt-key adv --keyserver keyserver.ubuntu.com --recv-keys FE7097963FEFBE72 && \
-apt-get update && \
-apt-get install duck
+RUN echo "deb https://s3.amazonaws.com/repo.deb.cyberduck.io stable main" > /etc/apt/sources.list.d/cyberduck.list && \
+    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys FE7097963FEFBE72 && \
+    apt-get update && \
+    apt-get install duck
+
+# install iRODS plugin
+RUN jupyter labextension install ijab && \
+    pip install jupyterlab_irods
 
 # Install and configure jupyter lab.
 COPY jupyter_notebook_config.json /opt/conda/etc/jupyter/jupyter_notebook_config.json
 
 # Add the jovyan user to UID 1000
 RUN groupadd jovyan && usermod -aG jovyan jovyan && usermod -d /home/jovyan -u 1000 jovyan
+
+RUN apt-get update && apt-get install -y sudo
+RUN usermod -aG sudo jovyan
+RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+
+RUN jupyter lab build
 
 USER jovyan
 WORKDIR /home/jovyan
