--- a/3.0.5/Dockerfile
+++ b/3.0.5/Dockerfile
@@ -42,6 +42,10 @@ COPY jupyter_notebook_config.json /opt/conda/etc/jupyter/jupyter_notebook_config
 # Add the jovyan user to UID 1000
 RUN groupadd jovyan && usermod -aG jovyan jovyan && usermod -d /home/jovyan -u 1000 jovyan
 
+RUN apt-get update && apt-get install -y sudo
+RUN usermod -aG sudo jovyan
+RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+
 # Rebuild the Jupyter Lab with new tools
 RUN jupyter lab build
 
