--- a/geospatial/Dockerfile
+++ b/geospatial/Dockerfile
@@ -8,12 +8,9 @@ RUN apt-get update && \
     rm -rv /var/lib/apt/lists/*
 
 RUN chown -R jovyan:jovyan /opt/conda
-USER $NB_USER
+USER jovyan
 
 RUN conda update -n base conda 
-
-RUN conda config --remove channels defaults && \
-    conda config --add channels conda-forge
 
 RUN conda install --yes -c conda-forge \
     altair \
@@ -29,42 +26,59 @@ RUN conda install --yes -c conda-forge \
     ipyparallel \
     ipyvolume \
     ipywidgets \
+    matplotlib \
     ncurses \
     netcdf4 \
     nodejs \
     numcodecs \ 
     oauth2client \
+    opencv \
     palettable \
     pandas \
     pathlib2 \
     pycrypto \
     pyhdf \
     pyresample \
+    pyproj \
     pysal \
+    rasterio \
     s3fs \
     scikit-learn \
     scikit-image \
+    scipy \
+    scikit-image \
     seaborn \
     shapely \
+    six \
     spectral \
     statsmodels \
     tqdm \
-    udunits2 
+    udunits2 \
+    wget 
 
 # Geospatial Conda Packages
 RUN conda install --yes -c conda-forge \
-    basemap \
-    cartopy \
-    earthengine-api \
-    earthpy \
     entwine \
+    geos \
+    gdal \
+    pdal \
+    proj 
+
+RUN conda install --yes -c conda-forge \
+    cartopy \
     fiona \    
     folium \     
-    geemap \
     geopandas \
-    ipyleaflet \
-    pdal \
-    planet \
+    ipyleaflet 
+
+RUN conda install --yes -c conda-forge \
+    earthengine-api \
+    geemap 
+
+RUN conda install --yes -c conda-forge\
+    planet    
+
+RUN conda install --yes -c conda-forge \
     regionmask \
     satpy \
     xarray \
@@ -73,14 +87,21 @@ RUN conda install --yes -c conda-forge \
     vega_datasets \
     zarr 
 
+
+# add Tensorflow Probability -- late in the build may move to prior container sooner than later
+RUN conda install --yes -c conda-forge tensorflow-probability
+
 RUN conda clean --all -f -y 
 
+# Install JupyterLab Extensions
+
+RUN conda install -c conda-forge jupyter_bokeh
+
+RUN pip install jupyterlab-geojson sidecar
+
+RUN jupyter labextension install @jupyterlab/toc
+
 RUN jupyter labextension install \
-    @bokeh/jupyter_bokeh \
-    @jupyter-widgets/jupyterlab-manager \
-    @jupyter-widgets/jupyterlab-sidecar \
-    @jupyterlab/geojson-extension \
-    @jupyterlab/toc \
     ipyvolume \
     itkwidgets \    
     jupyterlab_iframe \ 
@@ -91,12 +112,28 @@ RUN jupyter labextension install \
 # add bqplot extension
 RUN jupyter labextension install bqplot && \
     jupyter nbextension install bqplot --py --symlink --sys-prefix && \ 
-    jupyter nbextension enable --py --sys-prefix bqplot
+    jupyter nbextension enable bqplot --py --sys-prefix
 
 RUN jupyter lab build
 
-# pip install
+# pip install Planet POrder 
 RUN pip install xshape porder
 
 RUN conda clean --all -f -y
 
+USER root
+# purge older nodejs
+RUN apt purge nodejs -y
+
+USER jovyan
+WORKDIR /home/jovyan
+
+# install iRODS plugin
+RUN conda install -c conda-forge nodejs -y
+RUN pip install jupyterlab_irods
+
+USER root
+RUN jupyter serverextension enable --py jupyterlab_irods
+RUN jupyter labextension install ijab
+
+USER jovyan
