--- a/3.0.5/Dockerfile
+++ b/3.0.5/Dockerfile
@@ -38,8 +38,12 @@ RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | apt-key add - 
     rm -rf /var/lib/apt/lists/*
 
 # Install Go
-RUN wget -q -c https://dl.google.com/go/go1.16.4.linux-amd64.tar.gz -O - | sudo tar -xz -C /usr/local
+RUN wget -q -c https://dl.google.com/go/go1.17.6.linux-amd64.tar.gz -O - | sudo tar -xz -C /usr/local
 ENV PATH=$PATH:/usr/local/go/bin 
+
+# Install Rust
+RUN apt-get update && \
+    apt-get install -y cargo rustc
 
 # Install CyberDuck CLI
 RUN echo -e "deb https://s3.amazonaws.com/repo.deb.cyberduck.io stable main" | tee /etc/apt/sources.list.d/cyberduck.list > /dev/null && \
