updated geospatial and latest

--- a/geospatial/latest/Dockerfile
+++ b/geospatial/latest/Dockerfile
@@ -1,13 +1,5 @@
 FROM harbor.cyverse.org/vice/jupyter/datascience:latest
 
-USER root
-
-RUN apt update && \
-    apt install -y libfreetype6-dev pkg-config libx11-dev && \
-    apt clean && \
-    rm -rv /var/lib/apt/lists/*
-
-# RUN chown -R jovyan:jovyan /opt/conda
 USER jovyan
 
 RUN conda update conda 
@@ -15,14 +7,17 @@ RUN conda config --remove channels conda-forge
 RUN conda config --add channels conda-forge
 RUN conda config --set channel_priority strict
 COPY environment.yml /home/jovyan/ 
-RUN conda env create -f /home/jovyan/environment.yml
+RUN mamba env create -f /home/jovyan/environment.yml
 RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> /home/jovyan/.bashrc && \
-    echo "conda activate geospatial" >> /home/jovyan/.bashrc
+    echo "conda activate geospatial" >> /home/jovyan/.bashrc 
 RUN source /home/jovyan/.bashrc
+
+# Create Kernel for Jupyter Notebooks
+RUN python -m ipykernel install --user --name geospatial --display-name "Python (geospatial)"
 
 # Install JupyterLab widget extensions
 RUN pip install jupyterlab-geojson sidecar
-RUN sudo chown -R jovyan:jovyan /opt/conda/share
+RUN sudo chown -R 1000:100 /opt/conda/share
 RUN jupyter labextension install \
     ipyvolume \
     itkwidgets \    
@@ -32,5 +27,7 @@ RUN jupyter labextension install \
  && npm cache clean --force
 
 RUN jupyter lab build
+
+# Install geospatial kernel into Jupyter   
 
 RUN conda clean --all -f -y
