--- a/geospatial/latest/environment.yml
+++ b/geospatial/latest/environment.yml
@@ -4,8 +4,11 @@ channels:
 dependencies:
   - altair
   - awscli
+  - black-jupyter
   - bottleneck
   - bqplot
+  - bump2version
+  - codespell
   - contextily
   - cython  
   - dask
@@ -13,10 +16,6 @@ dependencies:
   - humanize
   - gcsfs 
   - google-api-python-client
-  - ipyleaflet 
-  - ipyparallel
-  - ipyvolume
-  - ipywidgets
   - jupyter_bokeh
   - matplotlib
   - ncurses
@@ -28,13 +27,15 @@ dependencies:
   - palettable
   - pandas
   - pathlib2
+  - plotly
+  - proplot
+  - psycopg2
   - pycrypto
   - pyhdf
   - pyresample
   - pyproj
   - pysal
-  - python=3.9.5
-  - rasterio
+  - python >=3.7
   - s3fs
   - scikit-learn
   - scikit-image
@@ -46,7 +47,10 @@ dependencies:
   - statsmodels
   - tqdm
   - udunits2
-  - wget 
+  - voila
+  - wget
+  - wxee 
+  - xmovie
 # geospatial Conda Packages
   - entwine
   - geos
@@ -54,16 +58,66 @@ dependencies:
   - pdal
   - proj 
   - cartopy
+  - dask-geopandas
+  - datashader
   - fiona
   - folium
-  - geopandas
   - earthengine-api
-  - geemap 
+  - earthpy
+  - easystac 
+  - eemont
+  - eomaps
+  - geemap
+  - gemgis
+  - geoalchemy2
+  - geopandas
+  - geoviews
+  - here-map-widget-for-jupyter
+  - httplib2shim
+  - hvplot
+  - ipygany
+  - ipyleaflet
+  - ipynb-py-convert
+  - ipyparallel
+  - ipyvolume
+  - ipyvtklink 
+  - ipywidgets
+  - keplergl
+  - laspy
+  - leafmap
+  - localtileserver
+  - mapboxgl
+  - movingpandas
+  - odc-stac
+  - osmnx
+  - owslib
+  - panel
+  - palettable
+  - pillow <=8.4.0 # required by sentinelhub 
   - planet
+  - planetary-computer
+  - pydeck
+  - python-mss
+  - pyntcloud
+  - pyvista
+  - radiant-mlhub
+  - rasterio
   - regionmask
+  - rasterstats
+  - rio-cogeo
+  - rioxarray
+  - s2cloudless
+  - sarpy
   - satpy
+  - sentinelsat
+  - shapely
+  - spyndex
+  - sqlalchemy
+  - stackstac
+  - streamlit-folium
   - xarray
-  - xarray-topo
   - xarray-simlab
+  - xarray-spatial
+  - xarray-topo
   - vega_datasets
   - zarr 
