fixed jupyter env geospatial

--- a/geospatial/latest/Dockerfile
+++ b/geospatial/latest/Dockerfile
@@ -9,8 +9,9 @@ RUN conda config --set channel_priority strict
 COPY environment.yml /home/jovyan/ 
 RUN mamba env create -f /home/jovyan/environment.yml
 RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> /home/jovyan/.bashrc && \
-    echo "conda activate geospatial" >> /home/jovyan/.bashrc && \
-    source /home/jovyan/.bashrc
+    echo "conda activate geospatial" >> /home/jovyan/.bashrc 
+
+RUN source /home/jovyan/.bashrc
 
 # Install JupyterLab widget extensions
 RUN pip install jupyterlab-geojson sidecar
@@ -25,7 +26,12 @@ RUN jupyter labextension install \
 
 RUN jupyter lab build
 
-RUN conda clean --all -f -y
+RUN mamba clean --all -f -y
 
-# Install geospatial kernel into Jupyter
-RUN python -m ipykernel install --user --name=geospatial --display-name "Python (Geospatial)"
+USER root
+ARG conda_env=geospatial
+# create Python kernel and link it to jupyter
+RUN "${CONDA_DIR}/envs/${conda_env}/bin/python" -m ipykernel install --user --name="${conda_env}" && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}"
+USER jovyan
