--- a/geospatial/latest/Dockerfile
+++ b/geospatial/latest/Dockerfile
@@ -35,3 +35,7 @@ RUN "${CONDA_DIR}/envs/${conda_env}/bin/python" -m ipykernel install --user --na
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
 USER jovyan
+
+COPY entry.sh /bin
+
+ENTRYPOINT ["bash", "/bin/entry.sh"]
