reverted latest to 3.3.4

--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -1,44 +1,25 @@
-FROM jupyter/datascience-notebook:latest
+FROM jupyter/datascience-notebook:lab-3.3.4
 
 USER root
 
 # Install a few dependencies for iCommands, text editing, and monitoring instances
 RUN apt update && \
-    apt install -y lsb-release apt-transport-https curl gnupg2 libfuse2 libfreetype6-dev pkg-config libx11-dev gcc less nodejs software-properties-common apt-utils glances htop nano 
+    apt install -y lsb-release apt-transport-https curl libfreetype6-dev pkg-config libx11-dev gcc less software-properties-common apt-utils glances htop nano 
 
 RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | apt-key add - && \
-    echo "deb [arch=amd64] https://packages.irods.org/apt/ bionic main" > /etc/apt/sources.list.d/renci-irods.list && \
-    apt update && \
-    wget -q -c \
-    http://security.ubuntu.com/ubuntu/pool/main/p/python-urllib3/python-urllib3_1.22-1ubuntu0.18.04.2_all.deb \
-    http://security.ubuntu.com/ubuntu/pool/main/r/requests/python-requests_2.18.4-2ubuntu0.1_all.deb \
-    http://security.ubuntu.com/ubuntu/pool/main/o/openssl1.0/libssl1.0.0_1.0.2n-1ubuntu5.8_amd64.deb && \
-    apt install -y \
-    ./python-urllib3_1.22-1ubuntu0.18.04.2_all.deb \
-    ./python-requests_2.18.4-2ubuntu0.1_all.deb \
-    ./libssl1.0.0_1.0.2n-1ubuntu5.8_amd64.deb && \
-    rm -rf \
-    ./python-urllib3_1.22-1ubuntu0.18.04.2_all.deb \
-    ./python-requests_2.18.4-2ubuntu0.1_all.deb \
-    ./libssl1.0.0_1.0.2n-1ubuntu5.8_amd64.deb && \
+    echo "deb [arch=amd64] https://packages.irods.org/apt/ $(lsb_release -sc) main" >> /etc/apt/sources.list.d/renci-irods.list && \
+    apt-get update && \
     apt install -y irods-icommands 
-
+    
 # Install Go
-RUN wget -q -c https://dl.google.com/go/go1.17.6.linux-amd64.tar.gz -O - | sudo tar -xz -C /usr/local
+RUN wget -q -c https://dl.google.com/go/go1.18.4.linux-amd64.tar.gz -O - | sudo tar -xz -C /usr/local
 ENV PATH=$PATH:/usr/local/go/bin 
-
-# Install Rust
-RUN apt update && \
-    apt install -y cargo rustc
 
 # Install CyberDuck CLI
 RUN echo "deb https://s3.amazonaws.com/repo.deb.cyberduck.io stable main" > /etc/apt/sources.list.d/cyberduck.list && \
     apt-key adv --keyserver keyserver.ubuntu.com --recv-keys FE7097963FEFBE72 && \
     apt update && \
     apt install duck
-
-# Install Github widget
-# RUN jupyter labextension install @jupyterlab/github
 
 # Install GitHub CLI
 RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg && \
@@ -61,27 +42,14 @@ ARG PRIV_CMDS='/bin/ch*,/bin/cat,/bin/gunzip,/bin/tar,/bin/mkdir,/bin/ps,/bin/mv
 RUN usermod -aG sudo jovyan && \
     echo "$LOCAL_USER ALL=NOPASSWD: $PRIV_CMDS" >> /etc/sudoers
 
-# Add the jovyan user to UID 1000
-# RUN groupadd jovyan && usermod -aG jovyan jovyan && usermod -d /home/jovyan -u 1000 -g 100 jovyan
-
 # Rebuild the Jupyter Lab with new tools
 RUN jupyter lab build
 
-# purge older nodejs
-RUN apt purge nodejs -y
+RUN addgroup jovyan
+RUN usermod -aG jovyan jovyan
 
 USER jovyan
 WORKDIR /home/jovyan
-
-# install iRODS plugin
-RUN conda install -c conda-forge nodejs -y
-RUN pip install jupyterlab_irods==3.0.*
-
-USER root
-RUN jupyter serverextension enable --py jupyterlab_irods
-RUN jupyter labextension install ijab
-
-USER jovyan
 EXPOSE 8888
 
 COPY entry.sh /bin
