updated geospatial kernel

--- a/geospatial/latest/Dockerfile
+++ b/geospatial/latest/Dockerfile
@@ -9,7 +9,8 @@ RUN conda config --set channel_priority strict
 COPY environment.yml /home/jovyan/ 
 RUN mamba env create -f /home/jovyan/environment.yml
 RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> /home/jovyan/.bashrc && \
-    echo "conda activate geospatial" >> /home/jovyan/.bashrc 
+    echo "conda activate geospatial" >> /home/jovyan/.bashrc
+RUN ipython kernel install --name "geospatial" --user     
 RUN source /home/jovyan/.bashrc
 
 # Install JupyterLab widget extensions
