--- a/.github/workflows/harbor.yml
+++ b/.github/workflows/harbor.yml
@@ -45,6 +45,18 @@ jobs:
           tags: harbor.cyverse.org/vice/jupyter/datascience:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+      
+      - name: Build and push earthlab
+        id: docker_build_earthlab
+        uses: docker/build-push-action@v2.6.1
+        with:
+          context: earthlab 
+          file: earthlab/Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: harbor.cyverse.org/vice/jupyter/earthlab:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
