--- a/earthlab/Dockerfile
+++ b/earthlab/Dockerfile
@@ -8,11 +8,12 @@ RUN conda config --add channels conda-forge
 RUN conda config --set channel_priority strict
 COPY environment.yml /home/jovyan/ 
 RUN mamba env create -f /home/jovyan/environment.yml
-RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> /home/jovyan/.bashrc && \
-    echo "conda deactivate" >> /home/jovyan/.bashrc && \
-    echo "conda activate Earthlab" >> /home/jovyan/.bashrc
+# using ~/.bash_profile instead of ~/.bashrc for non-interactive tty (-it) containers
+RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> /home/jovyan/.bash_profile && \
+    echo "conda deactivate" >> /home/jovyan/.bash_profile && \
+    echo "conda activate Earthlab" >> /home/jovyan/.bash_profile
 RUN . /opt/conda/etc/profile.d/conda.sh && conda activate Earthlab && python -m ipykernel install --user --name Earthlab     
-RUN source /home/jovyan/.bashrc
+RUN source /home/jovyan/.bash_profile
 
 # Install JupyterLab widget extensions
 RUN sudo chown -R 1000:100 /opt/conda/share
