--- a/geospatial/latest/Dockerfile
+++ b/geospatial/latest/Dockerfile
@@ -8,10 +8,11 @@ RUN conda config --add channels conda-forge
 RUN conda config --set channel_priority strict
 COPY environment.yml /home/jovyan/ 
 RUN mamba env create -f /home/jovyan/environment.yml
-RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> /home/jovyan/.bashrc && \
-    echo "conda activate geospatial" >> /home/jovyan/.bashrc
+# using ~/.bash_profile instead of ~/.bashrc for non-interactive tty (-it) containers
+RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> /home/jovyan/.bash_profile && \
+    echo "conda activate geospatial" >> /home/jovyan/.bash_profile
 RUN ipython kernel install --name "geospatial" --user     
-RUN source /home/jovyan/.bashrc
+RUN source /home/jovyan/.bash_profile
 
 # Install JupyterLab widget extensions
 RUN pip install jupyterlab-geojson sidecar
@@ -27,4 +28,3 @@ RUN jupyter labextension install \
 RUN jupyter lab build
 
 RUN mamba clean --all -f -y
-
