--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -1,31 +1,18 @@
-FROM jupyter/datascience-notebook:lab-3.4.2
+FROM jupyter/datascience-notebook:lab-3.6.1
 
 USER root
 
-# Install a few dependencies for iCommands, text editing, and monitoring instances
+# Install a few dependencies for goCommands, text editing, and monitoring instances
 RUN apt update && \
     apt install -y lsb-release apt-transport-https curl libfreetype6-dev pkg-config libx11-dev gcc less software-properties-common apt-utils glances htop nano 
 
-RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | apt-key add - && \
-    echo "deb [arch=amd64] https://packages.irods.org/apt/ $(lsb_release -sc) main" >> /etc/apt/sources.list.d/renci-irods.list && \
-    apt-get update && \
-    apt install -y irods-icommands 
-    
 # Install Go
 RUN wget -q -c https://dl.google.com/go/go1.18.4.linux-amd64.tar.gz -O - | sudo tar -xz -C /usr/local
 ENV PATH=$PATH:/usr/local/go/bin 
 
-# Install CyberDuck CLI
-RUN echo "deb https://s3.amazonaws.com/repo.deb.cyberduck.io stable main" > /etc/apt/sources.list.d/cyberduck.list && \
-    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys FE7097963FEFBE72 && \
-    apt update && \
-    apt install duck
-
-# Install GitHub CLI
-RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg && \
-    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" > /etc/apt/sources.list.d/github-cli.list && \
-    apt update && \
-    apt install gh
+# Install GoCommands
+RUN cd /opt && curl -L -o gocmd.tar.gz https://github.com/cyverse/gocommands/releases/download/v0.4.3/gocmd-v0.4.3-linux-amd64.tar.gz && \
+tar zxvf gocmd.tar.gz && rm gocmd.tar.gz 
 
 # Install and configure jupyter lab.
 COPY jupyter_notebook_config.json /opt/conda/etc/jupyter/jupyter_notebook_config.json
@@ -41,15 +28,35 @@ ARG PRIV_CMDS='/bin/ch*,/bin/cat,/bin/gunzip,/bin/tar,/bin/mkdir,/bin/ps,/bin/mv
 
 RUN usermod -aG sudo jovyan && \
     echo "$LOCAL_USER ALL=NOPASSWD: $PRIV_CMDS" >> /etc/sudoers
+RUN addgroup jovyan
+RUN usermod -aG jovyan jovyan
+
+# Install RStudio
+RUN apt update && apt install --yes gdebi-core && \
+    wget https://download2.rstudio.org/server/jammy/amd64/rstudio-server-2022.12.0-353-amd64.deb && \
+    gdebi -n rstudio-server-2022.12.0-353-amd64.deb && \
+    rm rstudio-server-2022.12.0-353-amd64.deb && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Install Shiny Server
+RUN wget https://download3.rstudio.org/ubuntu-18.04/x86_64/shiny-server-1.5.20.1002-amd64.deb && \
+    gdebi -n shiny-server-1.5.20.1002-amd64.deb && \
+    rm shiny-server-1.5.20.1002-amd64.deb && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+USER jovyan
+WORKDIR /home/jovyan
+
+# Install Jupyter Lab Proxy extensions (cards in Launcher)
+RUN mamba install --quiet --yes jupyter-rsession-proxy jupyter-server-proxy && \
+    pip install jupyter-shiny-proxy
+    
+# Install and configure jupyter lab. 
+COPY jupyter_notebook_config.json /opt/conda/etc/jupyter/jupyter_notebook_config.json
 
 # Rebuild the Jupyter Lab with new tools
 RUN jupyter lab build
 
-RUN addgroup jovyan
-RUN usermod -aG jovyan jovyan
-
-USER jovyan
-WORKDIR /home/jovyan
 EXPOSE 8888
 
 COPY entry.sh /bin
